2013-03-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.0 release procedure:
 	Changes since nco-4_2_6: fxm
	cd ~/nco;cvs tag -d nco-4_3_0;cvs tag -d nco-4_3_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.0 release"
	cvs tag -c nco-4_3_0;cvs tag -c nco-4_3_0-1

2013-03-27  Pedro Vicente  <pvicente@uci.edu>

	* Enable nearbyint(), rint(), round(), trunc() for MSVC

	* Add ncbo test #14; Group addition

2013-03-26  Charlie Zender  <zender@uci.edu>

	* ncks: always copy group and variable metadata (fixes bug introduced in 4.2.6)

	* Re-activate ncap/ncap2 rounding functions: nearbyint(), rint(), round(), trunc()

	* Implement source code for nearbyint(), rint(), round(), trunc()

	* Add configure checks for nearbyint(), rint(), round(), trunc()

2013-03-22  Pedro Vicente  <pvicente@uci.edu>

	* ncbo: nco_var_op_typ() Find operation type on variable, fixed or processed

	* ncbo: nco_msa_var_get_trv() Get variable data from disk taking account of multihyperslabs

	* ncbo: trv_tbl_mch() Match 2 tables (find common objects) and process common objects

2013-03-20  Charlie Zender  <zender@uci.edu>

	* ncecat: insert stubs for netCDF4 RECORD_AGGREGATE

2013-03-19  Pedro Vicente  <pvicente@uci.edu>

	* ncbo: nco_dmn_ass_var_trv() creates list of dimensions associated with input
	variable list by marking flg_ass_var in	unique dimension list

2013-03-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.6 release procedure:
 	Changes since nco-4_2_5: --rec_apn, non-atomics, --fix_rec_crd, scope
	cd ~/nco;cvs tag -d nco-4_2_6;cvs tag -d nco-4_2_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.6 release"
	cvs tag -c nco-4_2_6;cvs tag -c nco-4_2_6-1

2013-03-16  Pedro Vicente  <pvicente@uci.edu>

	* ncks -O -v two_dmn_rec_var ~/nco/data/in_grp.nc ~/foo.nc;ncks ~/foo.nc
        exposes TODO nco1091, a possible netCDF/HDF bug---duplicate dimension IDs are generated
        Seems to occur if dimension the same name when defined in a group and its ancestor group