@@ -1,20 +1,17 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.554 2013-03-27 00:33:25 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.555 2013-03-27 21:31:30 zender Exp $ -*-text-*-
 
 The netCDF Operators NCO version 4.3.0 are ready. 
 
 http://nco.sf.net (Homepage)
 http://dust.ess.uci.edu/nco (Homepage "mirror")
 
-This release ...
+This release brings some NCO floating point math capabilities to
+netCDF4 files. Specifically, ncbo (i.e., ncdiff) now works with
+on netCDF4 (and thus HDF5) files that also make use of groups.
 
-Reminder that ncks and ncecat work on many common HDF5 datasets, e.g.,
-NASA AURA HIRDLS HDF-EOS5
-NASA ICESat GLAS HDF5
-NASA SBUV HDF5...
-
-Work on NCO 4.2.7 is underway and focuses on netCDF4 support for
-ncrename and ncbo operators, and on better support for Windows builds
-(enabling DAP, UDUnits).
+Work on NCO 4.3.1 is underway and includes improved netCDF4 support
+for ncrename and ncbo operators, and on better support for Windows
+builds (enabling DAP, UDUnits).
 
 Enjoy,
 Charlie
@@ -23,12 +20,15 @@ Charlie
 
 NEW FEATURES:
 
-A. fxm
+A. ncbo works on netCDF4 files
 
 BUG FIXES:
 
 A. Fixed ncks bug introduced in version 4.2.6 where, by default,
    variable attributes were not copied to output file.
+
+B. Fixed ncatted fxm
+   Thanks to ocehugo for reporting this problem.
 
 KNOWN BUGS NOT YET FIXED:
 
@@ -50,7 +50,7 @@ A. NOT YET FIXED
    ncks -4 -O -v three_dmn_rec_var http://motherlode.ucar.edu:8080/thredds/dodsC/testdods/in_4.nc ~/foo.nc
    ncks ~/foo.nc # breaks with "NetCDF: Invalid dimension ID or name"
 
-   20120731: Unable to verify since in_4.nc no longer accessible
+   20120731: Unable to verify since in_4.nc no longer accessible on Unidata DAP server
    Bug report filed: netCDF #QUN-641037: dimension ID ordering assumptions
 
 B. NOT YET FIXED
@@ -68,6 +68,7 @@ B. NOT YET FIXED
 
 C. NOT YET FIXED (requires change to DAP protocol)
    Unable to retrieve contents of variables including period '.' in name
+   Periods are legal characters in netCDF variable names.
    Metadata is returned successfully, data is not.
    DAP non-transparency: Works locally, fails through DAP server.
 
@@ -144,3 +145,9 @@ F. NCO support for netCDF4 features is tracked at
    http://nco.sf.net/nco.html#nco4
 
    NCO supports netCDF4 atomic data types, compression, chunking, and groups.
+
+G. Reminder that ncks and ncecat work on many common HDF5 datasets, e.g.,
+   NASA AURA HIRDLS HDF-EOS5
+   NASA ICESat GLAS HDF5
+   NASA SBUV HDF5...
+
